fixed signup page, z-index and added demo user

--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -79,7 +79,7 @@
     padding-right: 0.75rem;
     border-width: 1px;
     border-radius: 0.5rem;
-    height: 2rem;
+    height: 2vh;
     outline-color: teal;
 }
 
