--- a/frontend/src/components/SignupFormModal/SignupForm.css
+++ b/frontend/src/components/SignupFormModal/SignupForm.css
@@ -1,6 +1,6 @@
 
 .header-text-signup {
-    padding-top: 3em;
+    padding-top: 1em;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -19,7 +19,7 @@
 
 .signup-form-cont {
     padding: 4em;
-    padding-top: 1em;
+    padding-top: .25em;
     padding-bottom: 1em;
     width: 25em;
 
@@ -41,7 +41,7 @@
     padding-right: 0.75rem;
     border-width: 1px;
     border-radius: 0.5rem;
-    height: 2rem;
+    height: 2vh;
     outline-color: teal;
     width: 28em;
 }
@@ -64,4 +64,10 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+}
+
+#signup-demo {
+    color: teal;
+    text-decoration: none;
+    cursor: pointer;
 }
